--- a/about.css
+++ b/about.css
@@ -112,20 +112,26 @@ section {
     unicode-bidi: isolate;
 }
 
-.about-content section img {
-    float: left;
+.about-content img {
+    float: right;
     margin: 0 20px 20px 0;
     max-width: 300px;
     height: auto;
 }
 
-.about-content section {
+.about-content {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: left;
+    align-items: right;
+    text-align: right;
+    justify-content: right;
 }
-
+.about-content2 img {
+    float: right; 
+    margin: 0 0 20px 20px; 
+    max-width: 300px; 
+    height: auto; 
+} 
 
 p {
     display: block;
@@ -139,7 +145,7 @@ p {
 .main-content {
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: right;
     text-align: left;
 }
 
