--- a/index.css
+++ b/index.css
@@ -31,6 +31,11 @@ nav {
     color: aliceblue;
     height: 80px;
 }
+nav a {
+    color: aliceblue; 
+    text-decoration: none; 
+    font-size: 16px; 
+}
 div {
     display: block;
     unicode-bidi: isolate;
